ajustes de forma a reportes

--- a/ELE.Principal/bin/propiedades_pm.properties
+++ b/ELE.Principal/bin/propiedades_pm.properties
@@ -32,6 +32,7 @@ opc.menu.numerar.plancha.recurso = Numerar Plancha Recurso
 opc.menu.expedir.resolucion.rechazo = Expedir Resolucion Rechazo
 opc.menu.consultar.plancha = Consultar Plancha
 opc.menu.expedir.resolucion.admision = Expedir Resolucion Admision
+opc.menu.expedir.resolucion.cumplimiento.requisitos = Expedir Resolucion Cumplimiento Requisitos
 opc.menu.expedir.resolucion.inadmision = Expedir Resolucion Inadmision
 opc.menu.cuociente.electoral = Cuociente Electoral
 opc.menu.cargar.entidades.electorales = Cargar Entidades Electorales
